# aiku-26-1-voter-simulation

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
data/candidates/: manifest.csv  registered.csv  summary_manifest.csv
data/ground_truth/: kep_exit_poll.csv  nec_official.csv  nec_turnout.csv
data/kgss/: df_clean.parquet  efa_coverage_diagnostic.json  efa_coverage_item_by_year.csv  efa_loadings.csv  efa_loadings_promax.csv  efa_report.html  efa_summary.json  factor_scores.parquet
data/persona_vectors/: SELECTED.json  v_conservative_layer36.npy
data/trait_validation/: filtered_prompts.json  summary.json  trait_judgments.jsonl
prompts/: trait_validation_rubric.txt
prompts/bns_seeds/: seed_templates.txt
prompts/pv_contrastive/: contrastive_prompts.txt
prompts/system_prompts/: orientation_descriptions.txt
prompts/user_prompts/: candidate_info.txt  instructions_L3.txt  instructions_main.txt
results/analysis/: age_by_cell.csv  marginal_contributions.csv  nation_by_cell.csv  orientation_age_by_cell.csv  orientation_age_by_cell_wide.csv  orientation_by_cell.csv  sex_by_cell.csv  sido_by_cell.csv  summary.md
scripts/: alpha_sweep.py  analyze_results.py  assign_bns_seeds.py  construct_agents.py  extract_persona_vectors.py  generate_case_studies.py  kgss_factor_analysis.py  layer_probing.py  narrative_swap.py  run_inference.py  trait_validation.py
src/: __init__.py
src/agents/: __init__.py  bns.py  demographics.py  narrative_judge.py  orientation.py  sampling.py  swap.py
src/inference/: __init__.py  parse.py  prompt_builder.py
src/kgss/: __init__.py  efa.py  factor_sampling.py  report.py
src/pv/: __init__.py  contrastive.py  generate.py  injection.py  layer_probing.py  trait_validation.py
(+14 files in other folders)
